<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp">
    </item>

    <item
        android:id="@+id/askForScore"
        android:title="@string/ask_for_score"
        android:icon="@drawable/ic_exit_to_app_black_24dp">
    </item>

    <item
        android:id="@+id/generateQERCODE"
        android:title="@string/generate_qr_code"
        android:icon="@drawable/ic_dashboard_black_24dp">
    </item>

    <item
        android:id="@+id/scanQRCODE"
        android:title="@string/scan_qr_code"
        android:icon="@drawable/ic_dashboard_black_24dp">
    </item>

    <item
        android:id="@+id/changeLang"
        android:title="@string/changeLang"
        android:icon="@drawable/ic_dashboard_black_24dp">
    </item>

    <item
        android:id="@+id/makeRequest"
        android:title="@string/make_request"
        android:icon="@drawable/ic_dashboard_black_24dp">
    </item>

    <item
        android:id="@+id/makePenalty"
        android:title="@string/make_penalty"
        android:icon="@drawable/ic_dashboard_black_24dp">
    </item>

</menu>