<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/dialogLayout"
    android:clickable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:gravity="center"
        android:id="@+id/teacherSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </Spinner>

    <Spinner
        android:layout_below="@id/teacherSpinner"
        android:gravity="center"
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </Spinner>

    <EditText
        android:gravity="center_vertical"
        android:layout_below="@id/options"
        android:hint="@string/description"
        android:id="@+id/requestBody"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:enabled="false"
        android:padding="15dp"
        android:layout_below="@id/requestBody"
        android:id="@+id/score"
        android:hint="@string/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="10dp"
        android:textColor="@color/startblue_transparent"
        android:id="@+id/ok"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/score"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="10dp"
        android:textColor="@color/startblue_transparent"
        android:id="@+id/cancel"
        android:layout_margin="10dp"
        android:layout_toLeftOf="@id/ok"
        android:layout_below="@id/score"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>