<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="10"
    android:background="#597da3"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="29dp"
        android:text="Теперь можно и начать"
        android:textColor="#ffffff"
        android:textSize="27sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/request_image" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/introSlide5Text"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:layout_marginEnd="20dp"
        android:layout_gravity="end"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:text="@string/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="end"
        android:textSize="14sp"
        android:textColor="#ffffff"
        android:text="@string/introSlide5TextContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="62dp" />
</LinearLayout>